--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
-	},
+	}, 
+	"engines": {
+		"node": ">=18.0.0 <19.0.0"
+	  }, 
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
