--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"serve": "serve -s dist"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -28,14 +29,15 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
-	}, 
+	},
 	"engines": {
 		"node": ">=18.0.0 <19.0.0"
-	  }, 
+	},
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
 		"jsonwebtoken": "^9.0.0",
-		"mongoose": "^7.0.3"
+		"mongoose": "^7.0.3",
+		"serve": "^14.2.3"
 	}
 }
