--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"axios": "^1.7.2",
 		"bcrypt": "^5.1.0",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.0.3",
